--- a/src/interface/templates/legalUser/applications/applications.ajax.html
+++ b/src/interface/templates/legalUser/applications/applications.ajax.html
@@ -10,3 +10,7 @@
 <hr class="hidden-xs">
 
 {% include 'legalUser/applications/applications_list.html' %}
+
+<div style="display: none;">
+	{% include 'legalUser/applications/applications_list.html' %}
+</div>
