--- a/src/interface/templates/legalUser/dashboard.ajax.html
+++ b/src/interface/templates/legalUser/dashboard.ajax.html
@@ -36,11 +36,12 @@
                     <table class="table table-striped" id="pending-table">
                         <thead>
                         <tr>
-                            <th style="width: 15%; min-width: 150px">活动名称</th>
-                            <th style="width: 15%; min-width: 110px">上次修改</th>
-                            <th style="width: 10000px">活动说明</th>
+                            <th style="width: 5%">#</th>
+                            <th style="width: 20%">活动名称</th>
+                            <th style="width: 20%">上次修改</th>
+                            <th style="width: 35%">活动说明</th>
                             <th>
-                                <div style="width: 55px"></div>
+                                <div style="width: 10%"></div>
                             </th>
                         </tr>
                         </thead>
@@ -48,6 +49,7 @@
                         {% if pending_applications %}
                             {% for app in pending_applications %}
                                 <tr>
+                                    <td>{{ forloop.counter }}</td>
                                     <td><a class="ajax-link fake-link"
                                            data-url="{% url 'test' %}">
                                         {{ app.name }} </a>
@@ -55,8 +57,8 @@
                                     <td>{{ app.subscribe_time }}</td>
                                     <td>{{ app.description|linebreaksbr|truncatechars:100 }}</td>
                                     <td>
-                                        <a class="fake-link collapse-row" href="#pending{{forloop.counter}}">
-                                            <span class="fa fa-check-square-o fa-fw"></span> 操作
+                                        <a class="fake-link collapse-row pull-right" href="#pending{{forloop.counter}}">
+                                            <span class="fa fa-check-square-o fa-fw"></span> 操作&emsp;
                                         </a>
                                     </td>
                                 </tr>
@@ -153,8 +155,8 @@
                                         {% endif %}
                                     </td>
                                     <td>
-                                        <a class="fake-link collapse-row" href="#already{{forloop.counter}}">
-                                            <span class="fa fa-check-square-o fa-fw"></span> 操作
+                                        <a class="fake-link collapse-row pull-right" href="#already{{forloop.counter}}">
+                                            <span class="fa fa-check-square-o fa-fw"></span> 操作&emsp;
                                         </a>
                                     </td>
                                 </tr>
@@ -262,7 +264,7 @@
                                     <td><a class="ajax-link fake-link" data-url="{% url 'test' %}">
                                         {{ activity.name }}
                                     </a></td>
-                                    <td>{{ activity.fillin}}</td>
+                                    <td align="center">{{ activity.fillin}}</td>
                                 </tr>
                             {% endfor %}
                         {% else %}
