--- a/src/interface/templates/manager/index.html
+++ b/src/interface/templates/manager/index.html
@@ -25,15 +25,15 @@
         </ul>
     </ul>
     <hr>
-    <a class="fake-link left-column-menu" data-toggle="collapse" data-target="#application-menu">
-        <strong><i class="fa fa-wrench fa-fw"></i>　发布公告</strong>
+    <a class="fake-link left-column-menu" data-toggle="collapse" data-target="#notice-menu">
+        <strong><i class="fa fa-tasks fa-fw"></i>　发布公告</strong>
     </a>
-    <ul class="nav nav-stacked collapse in" id="application-menu">
+    <ul class="nav nav-stacked collapse in" id="notice-menu">
         <hr>
         <ul class="nav nav-stacked collapse in nav-pills">
-            <li id="notice-design-item" class="nav-header left-column-item">
-                <a class="fake-link" >
-                    <i class="fa fa-tasks fa-fw"></i>　发布公告</a>
+            <li id="all-applications-item" class="nav-header left-column-item"
+                data-url="{% url 'manager/notice' %}">
+                <a class="fake-link"><i class="fa fa-tasks fa-fw"></i>　发布公告</a>
             </li>
         </ul>
     </ul>
