添加所有用户表格

--- a/src/interface/templates/manager/index.html
+++ b/src/interface/templates/manager/index.html
@@ -49,8 +49,8 @@
                 <a class="fake-link" >
                     <i class="fa fa-th-list fa-fw"></i>　所有报名</a>
             </li>
-            <li id="all-user-item" class="nav-header left-column-item"
-                data-url="{% url 'test' %}">
+            <li id="all-users-item" class="nav-header left-column-item"
+                data-url="{% url 'manager/applications_users' %}">
                 <a class="fake-link" >
                     <i class="fa fa-users fa-fw"></i>　所有用户</a>
             </li>
