--- a/src/interface/templates/legalUser/applications/applications_content.html
+++ b/src/interface/templates/legalUser/applications/applications_content.html
@@ -17,11 +17,14 @@
         <tr>
             <td>
                 {% if app.status == 'already' %}
-                    <a class="ajax-link fake-link" data-url="{% url 'test'%}">
+                    <a class="ajax-link fake-link" href="{% url 'questionnaire' 1000 %}" target="_blank">
                         {{ app.name }}
                     </a>
-                {% else %}
-                    {{ app.name }}
+                {% elif app.status == 'pending' %}
+                    <a class="fake-link" href="javascript:loadContent('{% url 'legalUser/design/id' app.type app.id%}',
+                                 {}, '#' + '{{app.type}}' + '-design-item')" >
+                        {{ app.name }}
+                    </a>
                 {% endif %}
             </td>
             <td>{{ app.subscribe_time }}</td>
@@ -35,7 +38,7 @@
             {% endif %}
             {% if params.type != 'trash' %}
             <td style="text-align: right">
-                <a class="fake-link collapse-row" href="#app_all{{forloop.counter}}">
+                <a class="fake-link collapse-row" href="#app_all{{forloop.counter}}" onclick="return collapseRow(this);">
                     <span class="fa fa-check-square-o fa-fw"></span> 操作
                 </a>
             </td>
@@ -48,42 +51,45 @@
                 <div id="app_all{{forloop.counter}}" class="operation" style="display:none; width: 100%">
                     <ul>
                         {% if app.status == 'pending' %}
-                            <li style="width: 25%" align="center">
-                                <a class="fake-link" href="#" >
+                            <li style="width: 33%" align="center">
+                                <a class="fake-link" href="javascript:loadContent('{% url 'legalUser/design/id' app.type app.id%}',
+                                 {}, '#' + '{{app.type}}' + '-design-item')" >
                                     <i class="fa fa-pencil-square-o fa-fw fa-2x" aria-hidden="true"></i> 修改
                                 </a>
                             </li>
-                            <li style="width: 25%" align="center">
-                                <a class="fake-link" href="#" >
+                            <li style="width: 33%" align="center">
+                                <a class="fake-link" href="javascript:publish_act('{{ app.id }}', '{% url 'api/publish_act' %}', '{% url 'legalUser/modal' %}')" >
                                     <i class="fa fa-file-text-o fa-fw fa-2x" aria-hidden="true"></i> 发布
                                 </a>
                             </li>
-                            <li style="width: 25%" align="center">
-                                <a class="fake-link" href="#" >
-                                    <i class="fa fa-bar-chart-o fa-fw fa-2x" aria-hidden="true"></i> 结果
-                                </a>
-                            </li>
-                            <li style="width: 25%" align="center">
-                                <a class="fake-link" href="javascript:remove_act('{{app.id}}', '{% url 'api/remove_act' %}', '#all-applications-item')" >
+                            <li style="width: 33%" align="center">
+                                <a class="fake-link" href="javascript:remove_act('{{app.id}}', '{% url 'api/remove_act' %}', '#all-applications-item')">
                                     <i class="fa fa-trash fa-fw fa-2x" aria-hidden="true"></i> 删除
                                 </a>
                             </li>
                         {% elif app.status == 'already' %}
-                            <li style="width: 30%" align="center">
-                                <a class="fake-link" href="#" >
+                            
+                            <li style="width: 24%" align="center">
+                                <a class="fake-link" href="{% url 'questionnaire' 1000 %}" target="_blank" >
+                                    <i class="fa fa-file-text-o fa-fw fa-2x" aria-hidden="true"></i> 查看
+                                </a>
+                            </li>
+                            <li style="width: 24%" align="center">
+                                <a class="fake-link" href="javascript:showModal('{% url 'legalUser/modal' %}', 'publish-modal', {'modal_type': 'publish','id': {{app.id}} })" >
                                     <i class="fa fa-share-square-o fa-fw fa-2x" aria-hidden="true"></i> 分享
                                 </a>
                             </li>
-                            <li style="width: 30%" align="center">
-                                <a class="fake-link" href="#" >
+                            <li style="width: 24%" align="center">
+                                <a class="fake-link" href="javascript:loadContent('{% url 'statistics/id' app.id %}', {}, '#statistics-list-item')" >
                                     <i class="fa fa-bar-chart-o fa-fw fa-2x" aria-hidden="true"></i> 结果
                                 </a>
                             </li>
-                            <li style="width: 30%" align="center">
+                            <li style="width: 24%" align="center">
                                 <a class="fake-link" href="javascript:remove_act('{{app.id}}', '{% url 'api/remove_act' %}', '#all-applications-item')" >
                                     <i class="fa fa-trash fa-fw fa-2x" aria-hidden="true"></i> 删除
                                 </a>
                             </li>
+                                            
                         {% endif %}
                     </ul>
                 </div>
@@ -93,22 +99,40 @@
         <tr></tr> <tr></tr>
     {% endfor %}
 
-    <script>
+<script>
     //处理折叠行
-    $(function(){
-    $("a.collapse-row").click(function(){
-        var _this= $(this).attr("href");
-        var _this_td = _this + "_td";
-        if($(_this).css("display")=="none"){
-            $(_this_td).slideDown("fast");
-            $(_this).slideDown("fast");
-        }else{
-            $(_this_td).slideUp("fast");
-            $(_this).slideUp("fast");
-        }
-        return false;
-    });
+   /* $(function(){
 
-});
+        $("a.collapse-row").click(function(){
+            
+        
+            var _this= $(this).attr("href");
+            var _this_td = _this + "_td";
+            if($(_this).css("display")=="none"){
+                $(_this_td).slideDown("fast");
+                $(_this).slideDown("fast");
+            }else{
+                $(_this_td).slideUp("fast");
+                $(_this).slideUp("fast");
+            }
+    
+            
+        });
+
+    });*/
+    function collapseRow(obj)
+    {
+        var this_div = $(obj).parent().parent().next().next().find("div");
+        var this_td = this_div.parent();
+        if($(this_div).css("display")=="none"){
+        //    alert("fang");
+            $(this_td).slideDown("fast");
+            $(this_div).slideDown("fast");
+        }else{
+        //    alert("shou");
+            $(this_td).slideUp("fast");
+            $(this_div).slideUp("fast");
+        }
+    }
 </script>
 {% endblock content %}
