--- a/src/interface/templates/legalUser/design/modal/publish_modal.html
+++ b/src/interface/templates/legalUser/design/modal/publish_modal.html
@@ -23,7 +23,7 @@
                         </div>
                         <br>
                         <div id="submit-button-field">
-                            <button type="submit" class="btn btn-primary form-btn">
+                            <button type="submit" class="btn btn-primary form-btn" href="javascript:window.location.reload();">
                                 确认
                             </button>
                         </div>
